# vit

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: config.yaml
config/data/: cifar100.yaml
config/model/: vit_base.yaml  vit_large.yaml  vit_small.yaml  vit_tiny.yaml
config/optimizer/: adamw.yaml
scripts/: train.py
src/vit/: engine.py
src/vit/data/: dataset.py
src/vit/model/: transformer.py  vision_transformer.py
